--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DeliverAnyValue"
         tools:targetApi="31" >
         <activity
-            android:name=".GetOtpActivity"
+            android:name=".activity.GetOtpActivity"
             android:exported="false"
             android:label="@string/title_activity_get_otp"
             android:theme="@style/Theme.DeliverAnyValue.NoActionBar" >
