--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -11,19 +13,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliverAnyValue"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD006Z3m51SbIGtHHL5tEb2Pbq8DYNe_Mc" />
+
+        <activity
+            android:name=".activity.AreaMapActivity"
+            android:exported="false"
+            android:label="@string/title_activity_area_map"
+            android:theme="@style/Theme.DeliverAnyValue"/>
         <activity
             android:name=".activity.GetOtpActivity"
             android:exported="false"
             android:label="@string/title_activity_get_otp"
-            android:theme="@style/Theme.DeliverAnyValue.NoActionBar" >
+            android:theme="@style/Theme.DeliverAnyValue">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
