--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliverAnyValue"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.ServicesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_services"
+            android:theme="@style/Theme.DeliverAnyValue">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -23,7 +34,7 @@
             android:name=".activity.AreaMapActivity"
             android:exported="false"
             android:label="@string/title_activity_area_map"
-            android:theme="@style/Theme.DeliverAnyValue"/>
+            android:theme="@style/Theme.DeliverAnyValue" />
         <activity
             android:name=".activity.GetOtpActivity"
             android:exported="false"
