--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,19 @@
         android:theme="@style/Theme.DeliverAnyValue"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activity.ServicesActivity"
             android:exported="false"
             android:label="@string/title_activity_services"
@@ -31,29 +44,10 @@
             android:value="AIzaSyD006Z3m51SbIGtHHL5tEb2Pbq8DYNe_Mc" />
 
         <activity
-            android:name=".activity.AreaMapActivity"
-            android:exported="false"
-            android:label="@string/title_activity_area_map"
-            android:theme="@style/Theme.DeliverAnyValue" />
-        <activity
             android:name=".activity.GetOtpActivity"
             android:exported="false"
             android:label="@string/title_activity_get_otp"
             android:theme="@style/Theme.DeliverAnyValue">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:noHistory="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
